--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Doodlekong" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.GuessASketch" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="colorPrimary">@color/black</item>
         <item name="colorPrimaryVariant">@color/bright_orange</item>
         <item name="colorOnPrimary">@color/white</item>
@@ -18,7 +18,7 @@
     </style>
 
     <style name="DialogStyle" parent="Theme.MaterialComponents.Dialog.Alert">
-        <item name="fontFamily">@font/handwriting</item>
+        <item name="fontFamily">@font/sourcesanspro_regular</item>
         <item name="backgroundTint">@color/white</item>
         <item name="android:textColor">@color/black</item>
     </style>
@@ -47,18 +47,18 @@
         <item name="hintTextColor">@color/lightgrey</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">28sp</item>
-        <item name="fontFamily">@font/handwriting</item>
+        <item name="fontFamily">@font/sourcesanspro_regular</item>
     </style>
 
     <style name="ButtonStyle" parent="Widget.MaterialComponents.Button.OutlinedButton">
         <item name="android:textSize">24sp</item>
-        <item name="fontFamily">@font/handwriting</item>
+        <item name="fontFamily">@font/sourcesanspro_regular</item>
         <item name="strokeWidth">2dp</item>
         <item name="strokeColor">@color/black</item>
     </style>
 
     <style name="TextViewStyle" parent="Widget.MaterialComponents.TextView">
-        <item name="fontFamily">@font/handwriting</item>
+        <item name="fontFamily">@font/sourcesanspro_regular</item>
         <item name="android:textSize">28sp</item>
         <item name="android:textColor">@color/black</item>
     </style>
