Add new splash logo

--- a/app/src/main/res/layout/fragment_username.xml
+++ b/app/src/main/res/layout/fragment_username.xml
@@ -16,15 +16,16 @@
         app:layout_constraintStart_toStartOf="@+id/tilUsername" />
 
     <ImageView
-        android:id="@+id/ivDoodlekong"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/materialTextView2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_appicon_v2" />
+            android:id="@+id/ivDoodlekong"
+            android:layout_width="293dp"
+            android:layout_height="208dp"
+            app:layout_constraintBottom_toTopOf="@+id/materialTextView2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.455"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.333"
+            app:srcCompat="@drawable/ic_appicon2" />
 
     <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tvWelcome"
