--- a/app/src/main/res/layout/fragment_select_room.xml
+++ b/app/src/main/res/layout/fragment_select_room.xml
@@ -36,29 +36,32 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_refresh" />
 
-    <ImageView
-        android:id="@+id/ivNoRoomsFound"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@+id/tvNoRoomsFound"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/ic_sad_monkey" />
+    <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/ivNoRoomsFound"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toTopOf="@+id/tvNoRoomsFound"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"
+            app:lottie_rawRes="@raw/not_found" />
 
     <TextView
-        android:id="@+id/tvNoRoomsFound"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/no_rooms_found"
-        android:layout_marginTop="50dp"
-        android:textSize="45sp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="@+id/rvRooms"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/rvRooms" />
+            android:id="@+id/tvNoRoomsFound"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:text="@string/no_rooms_found"
+            android:textSize="45sp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@+id/rvRooms"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/rvRooms"
+            app:layout_constraintVertical_bias="0.763" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvRooms"
