Split up fragments to prevent inconsistencies, prevent recyclerview crash

--- a/app/src/main/res/navigation/setup_nav_graph.xml
+++ b/app/src/main/res/navigation/setup_nav_graph.xml
@@ -19,8 +19,7 @@
         <action
                 android:id="@+id/action_selectRoomFragment_to_createRoomFragment"
                 app:destination="@id/createRoomFragment"
-                app:popUpTo="@id/selectRoomFragment"
-                app:popUpToInclusive="false" />
+                app:popUpTo="@id/selectRoomFragment" />
         <action
                 android:id="@+id/action_selectRoomFragment_to_drawingActivity"
                 app:destination="@id/drawingActivity" />
