Fix drawing bugs, make drawing activity

--- a/app/src/main/res/layout/fragment_create_room.xml
+++ b/app/src/main/res/layout/fragment_create_room.xml
@@ -92,7 +92,7 @@
             android:id="@+id/createRoomProgressBar"
             android:layout_width="117dp"
             android:layout_height="92dp"
-            android:visibility="visible"
+            android:visibility="gone"
             app:layout_constraintBottom_toTopOf="@+id/tilRoomName"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.502"
