Fix drawing and undo bug

--- a/app/src/main/res/navigation/setup_nav_graph.xml
+++ b/app/src/main/res/navigation/setup_nav_graph.xml
@@ -6,7 +6,7 @@
 
     <fragment
             android:id="@+id/usernameFragment"
-            android:name="com.realityexpander.guessasketch.ui.setup.username.UsernameFragment"
+            android:name="com.realityexpander.guessasketch.ui.setup.select_username.UsernameFragment"
             android:label="UsernameFragment" >
         <action
                 android:id="@+id/action_usernameFragment_to_selectRoomFragment"
