--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="lightgrey">#DDDDDD</color>
-    <color name="yellow">#FFEB3B</color>
+    <color name="yellow">#DDDB2B</color>
     <color name="overlay_color">#FFFFFF</color>
 </resources>
