--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="lightgrey">#DDDDDD</color>
     <color name="yellow">#DDDB2B</color>
     <color name="overlay_color">#FFFFFF</color>
+    <color name="gray">#888888</color>
 </resources>
