--- a/app/src/main/res/layout/activity_drawing.xml
+++ b/app/src/main/res/layout/activity_drawing.xml
@@ -89,15 +89,16 @@
             app:srcCompat="@drawable/ic_baseline_undo_24" />
 
         <ProgressBar
-            android:id="@+id/roundTimerProgressBar"
-            style="@style/HorizontalProgressBarStyle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:minHeight="10dp"
-            android:progress="100"
-            app:layout_constraintEnd_toEndOf="@id/tvCurWord"
-            app:layout_constraintStart_toStartOf="@id/tvCurWord"
-            app:layout_constraintTop_toBottomOf="@id/drawingView" />
+                android:id="@+id/roundTimerProgressBar"
+                style="@style/HorizontalProgressBarStyle"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:minHeight="10dp"
+                android:progress="100"
+                app:layout_constraintEnd_toEndOf="@id/tvCurWord"
+                app:layout_constraintStart_toStartOf="@id/tvCurWord"
+                app:layout_constraintTop_toBottomOf="@id/drawingView"
+                tools:visibility="visible" />
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tvCurWord"
