--- a/app/src/main/res/layout/activity_drawing.xml
+++ b/app/src/main/res/layout/activity_drawing.xml
@@ -106,6 +106,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:textStyle="bold"
+            tools:text="Current Word"
             app:layout_constraintTop_toBottomOf="@+id/roundTimerProgressBar" />
 
         <androidx.recyclerview.widget.RecyclerView
